# nix-attr-search

./: CHANGELOG.md  LICENSE  README.md  default.nix  flake.nix  home-manager-search.nix  nix-attr-search.cabal  nix-option-search.nix  shared.nix  shell.nix
internals/: lib.nix
internals/docbook2txt/: default.nix  docbook2txt.hs
internals/json2nix/: default.nix  haskell-overlay.nix  json2nix.hs
internals/xmldoc2txt/: default.nix  xmldoc2txt.hs
searchers/: home-manager-search.hs  home-manager-search.nix  nix-option-search.nix  nix-package-search.nix
src/: Main.hs
src/NAS/: DefaultPaths.hs.md  Preview.hs  Utils.hs
src/NAS/Cli/: Args.hs  Conversion.hs
src/NAS/Conversion/: Docbook2txt.hs  Json2nix.hs
src/NAS/Searchers/: HomeManager.hs  NixosOptions.hs
src/NAS/Templates/: OptionsTemplate.hs
templates/: option-preview-template-color.nix  option-preview-template.nix  package-preview-template-color.nix
utils/: format.nix  hlint.nix  ormolu.nix  test-json2nix.nix
